fix: ユーザーロール読み込み問題の修正
ログイン時にユーザーロールがデータベースから正しくロードされない問題を修正しました。
この問題により、COMPANY_ADMINロールを持つユーザーがSTAFFとして認証され、
/api/masters/**エンドポイントへのアクセスが拒否されていました。

主な変更:
- UserRoleRepository: ロール取得用のJOIN FETCHクエリメソッドを追加
- AuthService: ログイン処理でロールを明示的にロード
- UserRole: @Dataを削除し、カスタムequals/hashCodeを実装して循環参照を回避
- UserRepository: クエリを簡素化し、会社情報のみをフェッチ

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>